[enhancement] Added information on VM options to get Google Guice to work.