@@ -8,7 +8,15 @@
 Y.A.E.G.E.R is Yet Another Education Game Engine Runtime. It's primary goal is to become a fully 
 functional 2D game-engine that requires only a traditional Object Oriented style of programming.
 
-## Documentation
+### JDK 9+
+YAEGER uses Google Guice for dependency injection, which uses reflection to create the required
+instances. Since the module system from Java9 reflective access is limited, causing Runtime errors when using Google Guice.
+
+To enable Google Guice to access al required Java classes, add the following VM options
+to the run configuration:
+```
+--add-opens java.base/java.lang=com.google.guice
+```
 
 ## API
 
